style: Fix right border overflow

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ canvas {
 }
 
 .right-container {
-    flex: 0 0 80%;
+    flex: 0 0 75%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
